# DB_TO_LLM

./: .env.example  .git_commit_msg.txt  .gitignore  DB_TO_LLM_Architecture.pptx  README.md  Rule.md  make_pptx.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
Api_test/: api_test_client.py
Planner/: PLANNER.md  README.md  __init__.py  debug_planner.py  models.py  plan_validator.py  planner_prompt.py  planner_service.py
Planner/notebooks/: planner_llm_test.ipynb
Planner/tests/: test_planner_live.py
Root_Ingest/: README.md
Root_Ingest/config/: config.rag.yaml  config.yaml
Root_Ingest/doc/: ALL_LOG_TABLES_cleaned.sql  semiconductor_log_tables_overview.docx
Root_Ingest/ingest/: __init__.py  chunk_service.py  document_loader.py  embedding_service.py  ingest_pipeline.py  models.py  parser_service.py  vector_store_service.py
Root_Ingest/notebooks/: 01_document_load.ipynb  02_parse.ipynb  03_chunk.ipynb  04_embed.ipynb  05_vector_store.ipynb  06_end_to_end_test.ipynb
Root_Ingest/utils/: __init__.py  config_loader.py  logger.py  path_utils.py
Root_Stream/: README.md  __init__.py  main.py
Root_Stream/config/: config.example.yaml  config.yaml
Root_Stream/notebooks/: 01_natural_llm.ipynb  02_prompt_llm.ipynb  03_rag_prompt_llm.ipynb  04_api_result.ipynb  04_end_to_end_planner_flow.ipynb  05_mssql_sql_execution.ipynb
config/: config.yaml
db_to_llm/: __init__.py
docs/: Root_Ingest_Root_Stream_Architecture.pptx  langgraph_workflow.md  refactor_analysis.md
tests/: __init__.py  conftest.py
tools/: openwebui_db_to_llm.py
(+171 files in other folders)
